--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
+    "redux-action-helper": "^1.1.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
