most updated version

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-SERVER_URL=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+SERVER_URL_ON=
+AWS_ACCESS_KEY_ID_ON=
+AWS_SECRET_ACCESS_KEY_ON=
+SERVER_URL_OFF=
+AWS_ACCESS_KEY_ID_GET_OFF=
+AWS_SECRET_ACCESS_KEY_POST_OFF=
