added much of the dynamic build and integration into the front end views

--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-SERVER_URL_ON=
-AWS_ACCESS_KEY_ID_ON=
-AWS_SECRET_ACCESS_KEY_ON=
-SERVER_URL_OFF=
-AWS_ACCESS_KEY_ID_GET_OFF=
-AWS_SECRET_ACCESS_KEY_POST_OFF=
+SERVER_URL_ON=https://syylbxpwz6.execute-api.us-east-1.amazonaws.com/develop
+SERVER_URL_OFF=https://j0qezna9a1.execute-api.us-east-1.amazonaws.com/stg
