latest integration push

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SERVER_URL_ON=https://syylbxpwz6.execute-api.us-east-1.amazonaws.com/develop
-SERVER_URL_OFF=https://j0qezna9a1.execute-api.us-east-1.amazonaws.com/stg
+SERVER_URLON=https://syylbxpwz6.execute-api.us-east-1.amazonaws.com/develop
+SERVER_URLOFF=https://j0qezna9a1.execute-api.us-east-1.amazonaws.com/stg
