--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-grid-system": "^4.3.1",
+    "react-loader-spinner": "^2.0.6",
     "react-loading-overlay": "^0.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
