--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "csvtojson": "^2.0.8",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "drizzle": "^1.2.2",
@@ -40,6 +41,7 @@
     "jest": "20.0.4",
     "js-sha256": "^0.9.0",
     "object-assign": "4.1.1",
+    "objects-to-csv": "^1.2.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
